ci(project): fix ref
Signed-off-by: Zxilly <zhouxinyu1001@gmail.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,7 @@ jobs:
         uses: 1466587594/get-current-time@v2
         id: current-time
         with:
-          format: YYYYMMDD-HH
+          format: YYYYMMDDTHHmmssZ
           utcOffset: "+08:00"
 
       - uses: actions/checkout@v2
@@ -40,7 +40,7 @@ jobs:
       - uses: "marvinpinto/action-automatic-releases@latest"
         with:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
-          automatic_release_tag: "${{ steps.current-time.outputs.time }}"
+          automatic_release_tag: "${{ steps.current-time.outputs.formattedTime }}"
           prerelease: true
           title: "Development Build"
           files: frontend.tar.gz
