--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,7 @@ jobs:
         uses: 1466587594/get-current-time@v2
         id: current-time
         with:
-          format: YYYYMMDDTHHmmssZ
+          format: YYYYMMDDTHHmmss
           utcOffset: "+08:00"
 
       - uses: actions/checkout@v2
