ci(project): try to fix upload
Signed-off-by: Zxilly <zhouxinyu1001@gmail.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,6 +43,7 @@ jobs:
           automatic_release_tag: "${{ steps.current-time.outputs.formattedTime }}"
           prerelease: true
           title: "Development Build"
-          files: frontend.tar.gz
+          files: |
+            ./frontend.tar.gz
         
         
