--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,19 +23,21 @@ jobs:
           format: YYYYMMDDTHHmmss
           utcOffset: "+08:00"
 
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
-        with:
-         node-version: '^14'
-      
-      - name: Install JS Dep
-        run: pwd && yarn install
-        
-      - name: Build
-        run: yarn run build --modern
-      
-      - name: Pack files
-        run: tar zcvf ./frontend.tar.gz -C ./dist .
+#      - uses: actions/checkout@v2
+#      - uses: actions/setup-node@v2
+#        with:
+#         node-version: '^14'
+#
+#      - name: Install JS Dep
+#        run: pwd && yarn install
+#
+#      - name: Build
+#        run: yarn run build --modern
+#
+#      - name: Pack files
+#        run: tar zcvf ./frontend.tar.gz -C ./dist .
+      - name: test
+        run: echo a > frontend.tar.gz
        
       - uses: "marvinpinto/action-automatic-releases@latest"
         with:
@@ -44,6 +46,6 @@ jobs:
           prerelease: true
           title: "Development Build"
           files: |
-            ./frontend.tar.gz
+            frontend.tar.gz
         
         
