ci(project): try to fix upload
Signed-off-by: Zxilly <zhouxinyu1001@gmail.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,7 +37,7 @@ jobs:
 #      - name: Pack files
 #        run: tar zcvf ./frontend.tar.gz -C ./dist .
       - name: test
-        run: echo a > frontend.tar.gz
+        run: echo "a" > frontend.tar.gz
        
       - uses: "marvinpinto/action-automatic-releases@latest"
         with:
