--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,7 +37,7 @@ jobs:
 #      - name: Pack files
 #        run: tar zcvf ./frontend.tar.gz -C ./dist .
       - name: test
-        run: echo "a" > frontend.tar.gz
+        run: echo "a" > ./frontend.tar.gz
        
       - uses: "marvinpinto/action-automatic-releases@latest"
         with:
@@ -46,6 +46,6 @@ jobs:
           prerelease: true
           title: "Development Build"
           files: |
-            frontend.tar.gz
+            *.tar.gz
         
         
