--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
           format: YYYYMMDDTHHmmss
           utcOffset: "+08:00"
 
-#      - uses: actions/checkout@v2
+      - uses: actions/checkout@v2
 #      - uses: actions/setup-node@v2
 #        with:
 #         node-version: '^14'
