--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,18 +24,18 @@ jobs:
           utcOffset: "+08:00"
 
       - uses: actions/checkout@v2
-#      - uses: actions/setup-node@v2
-#        with:
-#         node-version: '^14'
-#
-#      - name: Install JS Dep
-#        run: pwd && yarn install
-#
-#      - name: Build
-#        run: yarn run build --modern
-#
-#      - name: Pack files
-#        run: tar zcvf ./frontend.tar.gz -C ./dist .
+      - uses: actions/setup-node@v2
+        with:
+         node-version: '^14'
+
+      - name: Install JS Dep
+        run: pwd && yarn install
+
+      - name: Build
+        run: yarn run build --modern
+
+      - name: Pack files
+        run: tar zcvf ./frontend.tar.gz -C ./dist .
        
       - uses: "marvinpinto/action-automatic-releases@latest"
         with:
@@ -43,8 +43,6 @@ jobs:
           automatic_release_tag: "${{ steps.current-time.outputs.formattedTime }}"
           prerelease: true
           files: |
-            *.xmind
-            *.tar.gz
-            yarn.lock
+            frontend/frontend.tar.gz
         
         
