ci(project): rename release
Signed-off-by: Zxilly <zhouxinyu1001@gmail.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,7 +46,7 @@ jobs:
           automatic_release_tag: "${{ steps.current-time.outputs.formattedTime }}"
           prerelease: true
           files: |
-            frontend/frontend.tar.gz
-            backend.tar.gz
+            frontend/frontend.zip
+            backend.zip
         
         
